--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginRight="151dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Username"
+        android:autofillHints="Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView10" />
@@ -40,6 +40,7 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:autofillHints="@string/Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.237"
         app:layout_constraintStart_toStartOf="parent"
